lab1_Skorobohatyi/SkorobohatyiLab1.cydsn/BUILD.log
--------------- Build Started: 03/16/2026 10:53:52 Project: SkorobohatyiLab1, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c:6:5: error: 'COLUMN_0_SetDriveMode' undeclared here (not in a function)
     COLUMN_0_SetDriveMode,
     ^
main.c:7:5: error: 'COLUMN_1_SetDriveMode' undeclared here (not in a function)
     COLUMN_1_SetDriveMode,
     ^
main.c:8:5: error: 'COLUMN_2_SetDriveMode' undeclared here (not in a function)
     COLUMN_2_SetDriveMode
     ^
main.c:13:5: error: 'COLUMN_0_Write' undeclared here (not in a function)
     COLUMN_0_Write,
     ^
main.c:14:5: error: 'COLUMN_1_Write' undeclared here (not in a function)
     COLUMN_1_Write,
     ^
main.c:15:5: error: 'COLUMN_2_Write' undeclared here (not in a function)
     COLUMN_2_Write
     ^
main.c:20:5: error: 'ROW_0_Read' undeclared here (not in a function)
     ROW_0_Read,
     ^
main.c:21:5: error: 'ROW_1_Read' undeclared here (not in a function)
     ROW_1_Read,
     ^
main.c:22:5: error: 'ROW_2_Read' undeclared here (not in a function)
     ROW_2_Read,
     ^
main.c:23:5: error: 'ROW_3_Read' undeclared here (not in a function)
     ROW_3_Read
     ^
main.c: In function 'initMatrix':
main.c:39:45: error: 'COLUMN_0_DM_DIG_HIZ' undeclared (first use in this function)
         COLUMN_x_SetDriveMode[column_index](COLUMN_0_DM_DIG_HIZ);
                                             ^
main.c:39:45: note: each undeclared identifier is reported only once for each function it appears in
main.c: In function 'readMatrix':
main.c:51:45: error: 'COLUMN_0_DM_STRONG' undeclared (first use in this function)
         COLUMN_x_SetDriveMode[column_index](COLUMN_0_DM_STRONG);
                                             ^
main.c:52:9: warning: statement with no effect [-Wunused-value]
         COLUMN_x_Write;
         ^
main.c:59:45: error: 'COLUMN_0_DM_DIG_HIZ' undeclared (first use in this function)
         COLUMN_x_SetDriveMode[column_index](COLUMN_0_DM_DIG_HIZ);
                                             ^
main.c: In function 'printMatrix':
main.c:66:5: warning: implicit declaration of function 'SW_Tx_UART_PutCRLF' [-Wimplicit-function-declaration]
     SW_Tx_UART_PutCRLF();
     ^
main.c:72:13: warning: implicit declaration of function 'SW_Tx_UART_PutHexInt' [-Wimplicit-function-declaration]
             SW_Tx_UART_PutHexInt(keys[row_index][column_index]);
             ^
main.c:73:13: warning: implicit declaration of function 'SW_Tx_UART_PutString' [-Wimplicit-function-declaration]
             SW_Tx_UART_PutString(" ");
             ^
main.c: In function 'main':
main.c:85:5: warning: implicit declaration of function 'SW_Tx_UART_Start' [-Wimplicit-function-declaration]
     SW_Tx_UART_Start();
     ^
main.c:103:13: warning: implicit declaration of function 'LED_R_Write' [-Wimplicit-function-declaration]
             LED_R_Write(0);
             ^
main.c:104:13: warning: implicit declaration of function 'LED_G_Write' [-Wimplicit-function-declaration]
             LED_G_Write(0);
             ^
main.c:105:13: warning: implicit declaration of function 'LED_B_Write' [-Wimplicit-function-declaration]
             LED_B_Write(0);
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/16/2026 10:53:54 ---------------
